[package]
name = "diff-ba-rs"
version = "0.1.1"
edition = "2021"
authors = ["NaokiM03"]
description = "This library provides macros to get the difference of variables caused by a procedure."
keywords = ["macro", "debug", "diff"]
documentation = "https://docs.rs/diff-ba-rs"
repository = "https://github.com/NaokiM03/diff-ba-rs"
readme = "README.md"
license = "MIT"

[dependencies]
diff = "0.1.13"
tiny-ansi = "0.1.0"
